[Server] fix prompt args